updating the project url

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <p>
               The Web app helps you to manage your daily tasks.
             </p>
-            <a href="#"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a href="https://satish-todolist.netlify.app/"><i class="fa-sharp fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="work">
