Updated meta tags

--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="description" content="Satish Portfolio" />
-  <meta name="keywords" content="Satish, Resume, Cv, Portfolio" />
-  <meta name="author" content="Satish kumar" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta key="desc" name="keywords" content="website, blog, portfolio, Satish kumar">
+  <meta property="og:title" content="Portfolio">
+  <meta property="og:description" content="This is the portfolio website of Satish Kumar done with HTML and CSS">
+  <meta name="keywords" content="Satish kumar, Frontend Developer, Web Developer, React Developer, Software Developer, Software Engineer, Portfolio, Devfolio, Folio">
+  <meta name="author" content="Satish Kumar">
+  <meta name="publisher" content="Satish Kumar">
+  <meta name="copyright" content="Satish Kumar">
+  <meta name="description" content="This is the portfolio website of Satish Kumar done with HTML and CSS">
+  <meta name="page-topic" content="Portfolio">
+  <meta name="page-type" content="Portfolio">
+  <meta name="audience" content="Everyone">
+  <meta name="language" content="English">
+  <meta name="robots" content="index, follow">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Portfolio | Satish Kumar">
+  <meta property="og:image" content="./images/image.jpg">
   <title>Personal Portfolio</title>
   <link rel="stylesheet" href="style.css" />
   <script src="https://kit.fontawesome.com/56b23aab10.js" crossorigin="anonymous"></script>
